Error Mitigation/MagiCoder/Data/javax_management_modelmbean/javax_management_modelmbeanOutputResult.txt
Sample: RequiredModelMBean_3
----------------------------------------------------------------
output:
./Data/javax_management_modelmbean/javaFiles/RequiredModelMBean_3.java:6: error: unreported exception MBeanException; must be caught or declared to be thrown
        RequiredModelMBean mbean = new RequiredModelMBean() {
                                   ^
1 error


================================================================

